# pipeline

./: .gitignore  AUTHORS  CHANGELOG.md  COPYING  Dockerfile  Dockerfile2  Makefile  Makefile.am  README.md  configure.ac  main.c
.github/workflows/: ci.yml  release.yml
dev/: failure  release  valgrind
prototype/: README.md  pp
src/: main.c
